11 June 2003

- Added no_axes option, changed sample56 to reflect this

30 May 2003

- Added version number for GD::Text PREREQ_PM
- Allow GD::Graph::Data::read() to read from file handle, instead of
  file
- Added tests for data file reading, and test data
- Release version 1.40

24 Feb 2003

- How come I never noticed this before? Right axis was disappearing
  when r_margin was zero.

22 Feb 2003

- Added patch by Ben Tilly from RT ticket 203 (manually, and much too
  late) to fix problems with picking decent values for axes when
  two_axes set to true. Added sample 57

20 Feb 2003

- Removed cetus font, because of unknown copyright status.
- Release 1.39 (skip 1.38, internal release)

11 Feb 2003, continued after 1.37 release

- Fixed version numbering
- Added limited, preliminary get_feature_coordinates support.

11 Feb 2003

- Fixed =head1 in GD/Graph/FAQ.pod
- release 1.37

10 Feb 2003

- Added some tests, mainly to make the CPAN testers happy :) The best
  way to test is still to use the samples.

- Preparation for 1.36

Jan 2003

- Made detection of output formats more robust. Newer GDs break on
  simply testing with UNIVERSAL::can.
- Added some documentation on error handling.

12 Jun 2002 - 21 Jun 2002

- Fixed various bugs: 
  - Area charts don't allow undefined variables, die on hotspot code
  - allow "0.00" to be equal to 0 when determining min and max values
    for axes
  - fixed shadows for cumulative bars

- Preparation for release 1.35

9 Jun 2002

- I just realised this file is severely out of date. I'll only keep
  track of the really big changes here, since I really can't remember
  what I've fixed and changed sine 1.33, and it's really too much work
  to go through all CVS comments.
- Added hbars.pm, and put most of the framework in place to allow the
  other charts to be plotted rotated as well.
- preparation of release 1.34

7 Oct 2000

- Addition of undefined data set colour.
- Addition of bar_width option
- Preparation of release 1.33
